--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>{{ site.title }}</title>
     <link rel="alternate" type="application/atom+xml" href="{{ '/feed.xml' | relative_url }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon96.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/favicon152.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="/favicon167.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon180.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicons/favicon96.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/favicons/favicon152.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="assets/favicons/favicon167.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/favicon180.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:image" content="{{ site.url }}/share.png">
