feat: Add Work page to showcase professional experience and update index content for clarity. This change introduces a dedicated Work page to highlight the author's role and responsibilities, enhancing user navigation. Additionally, the index.html content was streamlined to focus on key interests, improving overall presentation.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,18 @@
     <title>{{ site.title }}</title>
     <link rel="alternate" type="application/atom+xml" href="{{ '/feed.xml' | relative_url }}">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicons/favicon96.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/favicons/favicon152.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="assets/favicons/favicon167.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/favicon180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/android-chrome-512x512.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="assets/favicon/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/favicon/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="256x256" href="assets/favicon/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="384x384" href="assets/favicon/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="assets/favicon/apple-touch-icon.png">
+    <link rel="android-chrome" sizes="512x512" href="assets/favicon/android-chrome-512x512.png">
+    <link rel="android-chrome" sizes="192x192" href="assets/favicon/android-chrome-192x192.png">
+    <link rel="android-chrome" sizes="512x512" href="assets/favicon/android-chrome-512x512.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:image" content="{{ site.url }}/share.png">
