Revert "feat: Update Open Graph and Twitter meta tags for improved social sharing. This change replaces the default image with a new preview image, enhancing the visual appeal when shared on social media platforms."
This reverts commit d31ed44bc8a1b37fadc6e66d4432ae49819d7bae.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:image" content="{{ site.url }}/share.png">
+    <meta name="og:type" content="article">
+    <meta name="og:url" content="{{ site.url }}">
+    <meta name="og:title" content="{{ site.title }}">
+    <meta name="og:description" content="{{ site.description }}">
+    <meta name="og:image" content="{{ site.url }}/share.png">
     <style type="text/css">
         :root {
             --text-primary: #2d3748;
